[package]
name = "storj-uplink-lib"
version = "0.0.1"
authors = ["Ivan Fraixedes <ivan@fraixed.es>"]
edition = "2021"
description = "Idiomatic and safe Rust binding for the Storj Lib Uplink"
license = "MIT"
keywords = ["storj", "storjlabs", "decentralized", "binding", "uplink"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uplink-sys = "0.1.1"
